Adds and connects index.js to HTML file.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="index.css">
+
     <title>OnceUpon FairyTalez</title>
 
 </head>
@@ -20,4 +21,6 @@
     <!--main-->
 
     <!--footer-->
+
+    <script type="text/javascript" src="./src/index.js"></script>
 </body>
