Adds and connects animation icon in button element

--- a/index.html
+++ b/index.html
@@ -14,13 +14,82 @@
 </head>
 
 <body>
-    <!--header-->
+    <div class="mobile-screen">
+        <!--header-->
 
-    <!--nav-->
+        <!--nav-->
+        <nav>
+            <header>
+                <div>
+                    <div>
+                        <h1>OnceUpon FairyTalez</h1>
+                    </div>
+                    <div>
+                        <form>
+                            <input id="search-bar" type="text" placeholder="Search Movie Title">
+                        </form>
+                    </div>
+                </div>
+            </header>
+        </nav>
+        <div>
+            <div>
+                <div>
+                    <div>
+                        <button type="button">
+                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                            <lord-icon src="https://cdn.lordicon.com/qhuqqoel.json" trigger="hover"
+                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
+                            </lord-icon><br>
+                            <span>All</span>
+                        </button>
+                        <button type="button">
+                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                            <lord-icon src="https://cdn.lordicon.com/amxnacxd.json" trigger="hover"
+                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
+                            </lord-icon><br><span>Prince</span>
+                        </button>
+                        <button type="button">
+                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                            <lord-icon src="https://cdn.lordicon.com/zfpeedgc.json" trigger="hover"
+                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
+                            </lord-icon><br>
+                            <span>Princess</span>
+                        </button>
+                        <button type="button">
+                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                            <lord-icon src="https://cdn.lordicon.com/kwnsphnf.json" trigger="hover"
+                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
+                            </lord-icon><br>
+                            <span>
+                                Villain
+                            </span>
+                        </button>
+                        <button type="button">
+                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                            <lord-icon src="https://cdn.lordicon.com/miilpjag.json" trigger="hover"
+                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
+                            </lord-icon><br>
+                            <span>Fairy</span>
+                        </button>
+                        <button type="button">
+                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
+                            <lord-icon src="https://cdn.lordicon.com/ganitnqp.json" trigger="hover"
+                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
+                            </lord-icon><br>
+                            <span>Animal</span>
+                        </button>
 
-    <!--main-->
+                    </div>
+                </div>
+            </div>
 
-    <!--footer-->
 
+        </div>
+
+        <!--main-->
+
+        <!--footer-->
+    </div>
     <script type="text/javascript" src="./src/index.js"></script>
 </body>
