Adds main and footer elements in HTML successfully

--- a/index.html
+++ b/index.html
@@ -83,13 +83,34 @@
                     </div>
                 </div>
             </div>
-
-
         </div>
 
         <!--main-->
 
+        <main>
+            <div>
+                <img src="https://static.wikia.nocookie.net/disney/images/b/bb/Profile_-_Aladdin.png"
+                    alt="Picture of Aladdin">
+            </div>
+
+        </main>
+
+
         <!--footer-->
+        <div>
+            <footer>
+                <h4>Once Upon FairyTalez </h4>
+
+                <p> info@seepintokoreanlife.com
+
+                    <br>
+                    Copyright &copy;2023 by Kyuhee Lee. All Rights Reserved.
+                    <br> JavaScript Website Project.
+                </p>
+
+            </footer>
+        </div>
     </div>
+
     <script type="text/javascript" src="./src/index.js"></script>
 </body>
