--- a/index.html
+++ b/index.html
@@ -88,11 +88,9 @@
         <!--main-->
 
         <main>
-            <div>
-                <img src="https://static.wikia.nocookie.net/disney/images/b/bb/Profile_-_Aladdin.png"
-                    alt="Picture of Aladdin">
-            </div>
+            <div class="imgChar">
 
+            </div>
         </main>
 
 
