Uses fetch() to call only princess characterType.

--- a/index.html
+++ b/index.html
@@ -32,31 +32,33 @@
                 </div>
             </header>
         </nav>
-        <div>
-            <div>
-                <div>
-                    <div>
-                        <button type="button">
+        <div class="collection">
+            <div class="imgContainer">
+                <div class="row">
+                    <div class="imgFilter">
+                        <button class="filterChar active" type="button" onclick="filterButton ('all')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/qhuqqoel.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br>
                             <span>All</span>
                         </button>
-                        <button type="button">
+                        <button class="filterChar" type="button" onclick="filterButton ('prince-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/amxnacxd.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br><span>Prince</span>
+
                         </button>
-                        <button type="button">
+                        <button class="filterChar" type="button" onclick="filterButton ('princess-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/zfpeedgc.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br>
                             <span>Princess</span>
+
                         </button>
-                        <button type="button">
+                        <button class="filterChar" type="button" onclick="filterButton ('villain-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/kwnsphnf.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
@@ -64,22 +66,22 @@
                             <span>
                                 Villain
                             </span>
+
                         </button>
-                        <button type="button">
+                        <button class="filterChar" type="button" onclick="filterButton ('fairy-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/miilpjag.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br>
                             <span>Fairy</span>
                         </button>
-                        <button type="button">
+                        <button class="filterChar" type="button" onclick="filterButton ('animal-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/ganitnqp.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br>
                             <span>Animal</span>
                         </button>
-
                     </div>
                 </div>
             </div>
