--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <header>
                 <div>
                     <div>
-                        <h1>OnceUpon FairyTalez</h1>
+                        <h1> <span class="font-color1 ">O</span><span class="font-color2 ">nce</span><span
+                                class="font-color3 ">U</span><span class="font-color4 ">pon</span> <span
+                                class="font-color5 ">Fairy<span class="font-color6 ">Talez</span></h1>
                     </div>
                     <div>
                         <form>
