Gives font and border effects to each character

--- a/index.html
+++ b/index.html
@@ -38,21 +38,22 @@
             <div class="imgContainer">
                 <div class="row">
                     <div class="imgFilter">
-                        <button class="filterChar active" type="button" onclick="filterButton ('all')">
+                        <button class="filterChar allButton active" type="button" onclick="filterButton ('all')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/qhuqqoel.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br>
                             <span>All</span>
                         </button>
-                        <button class="filterChar" type="button" onclick="filterButton ('prince-char')">
+                        <button class="filterChar princeButton" type="button" onclick="filterButton ('prince-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/amxnacxd.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br><span>Prince</span>
 
                         </button>
-                        <button class="filterChar" type="button" onclick="filterButton ('princess-char')">
+                        <button class="filterChar princessButton" type="button"
+                            onclick="filterButton ('princess-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/zfpeedgc.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
@@ -60,7 +61,7 @@
                             <span>Princess</span>
 
                         </button>
-                        <button class="filterChar" type="button" onclick="filterButton ('villain-char')">
+                        <button class="filterChar villainButton" type="button" onclick="filterButton ('villain-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/kwnsphnf.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
@@ -70,14 +71,14 @@
                             </span>
 
                         </button>
-                        <button class="filterChar" type="button" onclick="filterButton ('fairy-char')">
+                        <button class="filterChar fairyButton" type="button" onclick="filterButton ('fairy-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/miilpjag.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br>
                             <span>Fairy</span>
                         </button>
-                        <button class="filterChar" type="button" onclick="filterButton ('animal-char')">
+                        <button class="filterChar animalButton" type="button" onclick="filterButton ('animal-char')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/ganitnqp.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
