Provides a different view of the full screen

--- a/index.html
+++ b/index.html
@@ -15,18 +15,17 @@
 
 <body>
     <div class="mobile-screen">
-        <!--header-->
-
         <!--nav-->
         <nav>
+            <!--header-->
             <header>
-                <div>
-                    <div>
+                <div id="headerGrid">
+                    <div class="titleGrid">
                         <h1> <span class="font-color1 ">O</span><span class="font-color2 ">nce</span><span
                                 class="font-color3 ">U</span><span class="font-color4 ">pon</span> <span
                                 class="font-color5 ">Fairy<span class="font-color6 ">Talez</span></h1>
                     </div>
-                    <div>
+                    <div class="searchGrid">
                         <form>
                             <input id="search-bar" type="text" placeholder="Search Movie Title">
                         </form>
@@ -100,19 +99,18 @@
 
 
         <!--footer-->
-        <div>
-            <footer>
-                <h4>Once Upon FairyTalez </h4>
 
-                <p> info@seepintokoreanlife.com
+        <footer>
+            <div class="ftStyle">
+                <h4>OnceUpon FairyTalez </h4>
 
-                    <br>
+                <p>
                     Copyright &copy;2023 by Kyuhee Lee. All Rights Reserved.
                     <br> JavaScript Website Project.
                 </p>
+            </div>
+        </footer>
 
-            </footer>
-        </div>
     </div>
 
     <script type="text/javascript" src="./src/index.js"></script>
