Fixes filterButton function and appears data.

--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
                             </lord-icon><br>
                             <span>All</span>
                         </button>
-                        <button class="filterChar princeButton" type="button" onclick="filterButton ('prince-char')">
+                        <button class="filterChar princeButton" type="button" onclick="filterButton ('prince')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/amxnacxd.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br><span>Prince</span>
 
                         </button>
-                        <button class="filterChar princessButton" type="button"
-                            onclick="filterButton ('princess-char')">
+                        <button class="filterChar princessButton" type="button" onclick="filterButton ('princess')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/zfpeedgc.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
@@ -60,7 +59,7 @@
                             <span>Princess</span>
 
                         </button>
-                        <button class="filterChar villainButton" type="button" onclick="filterButton ('villain-char')">
+                        <button class="filterChar villainButton" type="button" onclick="filterButton ('villain')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/kwnsphnf.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
@@ -70,14 +69,14 @@
                             </span>
 
                         </button>
-                        <button class="filterChar fairyButton" type="button" onclick="filterButton ('fairy-char')">
+                        <button class="filterChar fairyButton" type="button" onclick="filterButton ('fairy')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/miilpjag.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
                             </lord-icon><br>
                             <span>Fairy</span>
                         </button>
-                        <button class="filterChar animalButton" type="button" onclick="filterButton ('animal-char')">
+                        <button class="filterChar animalButton" type="button" onclick="filterButton ('animal')">
                             <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
                             <lord-icon src="https://cdn.lordicon.com/ganitnqp.json" trigger="hover"
                                 colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
