Adds search submit event

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
                                 class="font-color3 ">U</span><span class="font-color4 ">pon</span> <span
                                 class="font-color5 ">Fairy<span class="font-color6 ">Talez</span></h1>
                     </div>
+                    <div id="searchGrid">
+                        <form id="formGridEnd">
+                            <input id="search-bar" type="text" placeholder="Search Movie Title">
+                            <button type="submit" id="search" class="buttons">Search</button>
 
-                    <form id="searchGrid">
-                        <input id="search-bar" type="text" placeholder="Search Movie Title">
-                        <button type="submit" id="search" class="buttons">Search</button>
+                        </form>
 
-                    </form>
-
+                    </div>
                 </div>
             </header>
         </nav>
