Adds mouseover addEventListener on h1

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div id="searchGrid">
                         <form id="formGridEnd">
                             <input id="search-bar" type="text" placeholder="Search Movie Title">
-                            <button type="submit" id="search" class="buttons">Search</button>
+                            <button type="submit" class="buttons">Search</button>
 
                         </form>
 
