Creates an assets folder for GIF icons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" type="text/css" href="index.css">
-
     <title>OnceUpon FairyTalez</title>
 
 </head>
@@ -41,49 +40,32 @@
                 <div class="row">
                     <div class="imgFilter">
                         <button class="filterChar allButton active" type="button" data-id='all'>
-                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
-                            <lord-icon src="https://cdn.lordicon.com/qhuqqoel.json" trigger="hover"
-                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
-                            </lord-icon><br>
+                            <img src="./assets/all-icon.gif" alt="all icon" /><br>
                             <span>All</span>
                         </button>
                         <button class="filterChar princeButton" type="button" data-id='prince'>
-                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
-                            <lord-icon src="https://cdn.lordicon.com/amxnacxd.json" trigger="hover"
-                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
-                            </lord-icon><br><span>Prince</span>
+                            <img src="./assets/prince-icon.gif" alt="prince icon" />
+                            <br><span>Prince</span>
 
                         </button>
                         <button class="filterChar princessButton" type="button" data-id='princess'>
-                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
-                            <lord-icon src="https://cdn.lordicon.com/zfpeedgc.json" trigger="hover"
-                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
-                            </lord-icon><br>
+                            <img src="./assets/princess-icon.gif" alt="princess icon" /><br>
                             <span>Princess</span>
 
                         </button>
                         <button class="filterChar villainButton" type="button" data-id='villain'>
-                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
-                            <lord-icon src="https://cdn.lordicon.com/kwnsphnf.json" trigger="hover"
-                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
-                            </lord-icon><br>
+                            <img src="./assets/villain-icon.gif" alt="villain icon" /><br>
                             <span>
                                 Villain
                             </span>
 
                         </button>
                         <button class="filterChar fairyButton" type="button" data-id='fairy'>
-                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
-                            <lord-icon src="https://cdn.lordicon.com/miilpjag.json" trigger="hover"
-                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
-                            </lord-icon><br>
+                            <img src="./assets/fairy-icon.gif" alt="fairy icon" /><br>
                             <span>Fairy</span>
                         </button>
                         <button class="filterChar animalButton" type="button" data-id='animal'>
-                            <script src="https://cdn.lordicon.com/bhenfmcm.js"></script>
-                            <lord-icon src="https://cdn.lordicon.com/ganitnqp.json" trigger="hover"
-                                colors="primary:#4be1ec,secondary:#cb5eee" style="width:70px;height:70px">
-                            </lord-icon><br>
+                            <img src="./assets/animal-icon.gif" alt="animal icon" /><br>
                             <span>Animal</span>
                         </button>
                     </div>
@@ -114,6 +96,6 @@
         </footer>
 
     </div>
-
+    <!--kyuhee Lee js-->
     <script type="text/javascript" src="./src/index.js"></script>
 </body>
